<resources>
    <string name="app_name">andre p1</string>
    <string name="nova_conta">Nova conta</string>
    <string name="_4">4</string>
    <string name="divisao">/</string>
    <string name="_7">7</string>
    <string name="multiplicacao">*</string>
    <string name="_9">9</string>
    <string name="ac">ac</string>
    <string name="mais">+</string>
    <string name="_5">5</string>
    <string name="igual">=</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="menos">-</string>
    <string name="_2">2</string>
</resources>